--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,13 @@
 BEFORE SUBMIT
-make a site-map
-validate robots.txt
-Check for warnings CSS HTML JS
-test open graph tags
-look at helmet for better SEO
 
-clean up comments
+
+1) Ask Augie to review text
+
+2) Check for warnings CSS HTML JS
+
+3) Multiple JavaScript interactions.
+
+mention in the comments
+1) the links to the site
+2) the JS interactivity
+3) the browser I used
